Change to ALMAe numbering

--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -66,7 +66,7 @@ source = G10.62-0.38
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -0.851 km/s
-label = ${source} ALMA1a CH$$_3$$CN
+label = ${source} ALMAe1 CH$$_3$$CN
 # Range
 vmin = -5 km/s
 vmax = 5 km/s
@@ -83,7 +83,7 @@ source = G10.62-0.38
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1b_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = 1.51 km/s
-label = ${source} ALMA1b CH$$_3$$CN
+label = ${source} ALMAe2 CH$$_3$$CN
 # Range
 vmin = -5 km/s
 vmax = 5 km/s
@@ -101,7 +101,7 @@ source = G10.62-0.38
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1c_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = 1.35 km/s
-label = ${source} ALMA1c CH$$_3$$CN
+label = ${source} ALMAe3 CH$$_3$$CN
 # Range
 vmin = -5 km/s
 vmax = 5 km/s
@@ -126,7 +126,7 @@ source = G11.1-0.12
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -31.85 km/s
-label = ${source} ALMA1 CH$$_3$$CN
+label = ${source} ALMAe1 CH$$_3$$CN
 # Range
 vmin = -7 km/s
 vmax = 7 km/s
@@ -151,7 +151,7 @@ source = G11.92-0.61
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
 image = ${results}/CH3CN_12_3_-11_3__width50.subcube.moment1.fits
 shift_data = -35.1 km/s
-label = ${source} ALMA1a CH$$_3$$CN
+label = ${source} ALMAe1 CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -172,7 +172,7 @@ source = G11.92-0.61
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1b_moments
 image = ${results}/CH3CN_12_3_-11_3__width24.subcube.moment1.fits
 shift_data = -37 km/s
-label = ${source} ALMA1b CH$$_3$$CN
+label = ${source} ALMAe5 CH$$_3$$CN
 # Range
 vmin = -4 km/s
 vmax = 4 km/s
@@ -190,7 +190,7 @@ source = G11.92-0.61
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width24.subcube.moment1.fits
 shift_data = -35.7 km/s
-label = ${source} ALMA3 CH$$_3$$CN
+label = ${source} ALMAe4 CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -215,7 +215,7 @@ source = G14.22-0.50_S
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = -19.61 km/s
-label = G14.22-0.50 S ALMA1 CH$$_3$$OH
+label = G14.22-0.50 S ALMAe2 CH$$_3$$OH
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -244,7 +244,7 @@ source = G29.96-0.02
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
 shift_data = -97.25 km/s
-label = ${source} ALMA1 CH$$_3$$OH
+label = ${source} ALMAe1 CH$$_3$$OH
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -278,7 +278,7 @@ source = G333.12-0.56
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width34.subcube.moment1.fits
 shift_data = 58.47 km/s
-label = ${source} ALMA1 CH$$_3$$OH
+label = ${source} ALMAe1 CH$$_3$$OH
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -299,7 +299,7 @@ source = G333.12-0.56
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = 54.1 km/s
-label = ${source} ALMA2 CH$$_3$$CN
+label = ${source} ALMAe6 CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -348,7 +348,7 @@ arrows_ls = --, --, -, -
 arrows_style = -, -, -> , ->
 arrows_pa = 133 deg, 221 deg, 220 deg, 125 deg
 texts = 16h19m50.905s -50d15m10.53s icrs, 16h19m50.875s -50d15m10.61s icrs
-texts_text = ALMA3a, ALMA3b
+texts_text = ALMAe5, ALMAe14
 
 [G333.23_alma3_continuum]
 loc = 3 2
