--- a/configs/plots/papers/group_moments.2.cfg
+++ b/configs/plots/papers/group_moments.2.cfg
@@ -69,7 +69,7 @@ results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/HNCO_10_0_10_-9_0_9__width30.subcube.moment1.fits
 shift_data = 43.55 km/s
 #label = ${source} ALMA1 CH$$_3$$OH
-label = ${source} ALMA1 HNCO
+label = ${source} ALMAe1 HNCO
 # Range
 vmin = -3 km/s
 vmax = 3 km/s
@@ -90,7 +90,7 @@ source = G333.46-0.16
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma7_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = 43.2 km/s
-label = ${source} ALMA7 CH$$_3$$CN
+label = ${source} ALMAe2 CH$$_3$$CN
 # Range
 vmin = -9 km/s
 vmax = 9 km/s
@@ -118,7 +118,7 @@ source = G335.579-0.272
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
 shift_data = 46.9 km/s
-label = ${source} ALMA1 CH$$_3$$OH
+label = ${source} ALMAe1 CH$$_3$$OH
 # Range
 vmin = -7 km/s
 vmax = 7 km/s
@@ -139,7 +139,7 @@ source = G335.579-0.272
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
 shift_data = 53.1 km/s
-label = ${source} ALMA3 CH$$_3$$OH
+label = ${source} ALMAe4 CH$$_3$$OH
 # Range
 vmin = -12 km/s
 vmax = 12 km/s
@@ -167,7 +167,7 @@ source = G335.78+0.17
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width44.subcube.moment1.fits
 shift_data = 48.94 km/s
-label = ${source} ALMA1 CH$$_3$$OH
+label = ${source} ALMAe1 CH$$_3$$OH
 # Range
 vmin = -7 km/s
 vmax = 7 km/s
@@ -188,7 +188,7 @@ source = G335.78+0.17
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
 shift_data = 50.51 km/s
-label = ${source} ALMA2 CH$$_3$$OH
+label = ${source} ALMAe2 CH$$_3$$OH
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -213,7 +213,7 @@ source = G336.01-0.82
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = 47.2 km/s
-label = ${source} ALMA1 CH$$_3$$OH
+label = ${source} ALMAe2 CH$$_3$$OH
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -241,7 +241,7 @@ source = G34.43+0.24
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = -58.44 km/s
-label = ${source} ALMA1 CH$$_3$$OH
+label = ${source} ALMAe2 CH$$_3$$OH
 # Range
 vmin = -5 km/s
 vmax = 5 km/s
@@ -269,7 +269,7 @@ source = G343.12-0.06
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width20.subcube.moment1.fits
 shift_data = 33.71 km/s
-label = ${source} ALMA1 CH$$_3$$OH
+label = ${source} ALMAe1 CH$$_3$$OH
 # Range
 vmin = -5 km/s
 vmax = 5 km/s
@@ -299,7 +299,7 @@ source = G35.03+0.35_A
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -45.94 km/s
-label = G35.03+0.35 A ALMA1 CH$$_3$$CN
+label = G35.03+0.35 A ALMAe1 CH$$_3$$CN
 # Range
 vmin = -8 km/s
 vmax = 8 km/s
@@ -327,7 +327,7 @@ source = G35.13-0.74
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -35.93 km/s
-label = ${source} ALMA1 CH$$_3$$CN
+label = ${source} ALMAe1 CH$$_3$$CN
 # Range
 vmin = -8 km/s
 vmax = 8 km/s
@@ -348,7 +348,7 @@ source = G35.13-0.74
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -34.39 km/s
-label = ${source} ALMA2 CH$$_3$$CN
+label = ${source} ALMAe2 CH$$_3$$CN
 # Range
 vmin = -5 km/s
 vmax = 5 km/s
