--- a/configs/plots/papers/group_moments.4.cfg
+++ b/configs/plots/papers/group_moments.4.cfg
@@ -67,7 +67,7 @@ source = IRAS_18182-1433
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -61.12 km/s
-label = IRAS 18182-1433 ALMA3 CH$$_3$$CN
+label = IRAS 18182-1433 ALMAe5 CH$$_3$$CN
 # Range
 vmin = -7 km/s
 vmax = 7 km/s
@@ -88,7 +88,7 @@ source = IRAS_18182-1433
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma5_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -62.7 km/s
-label = IRAS 18182-1433 ALMA5 CH$$_3$$CN
+label = IRAS 18182-1433 ALMAe10 CH$$_3$$CN
 # Range
 vmin = -8 km/s
 vmax = 8 km/s
@@ -115,7 +115,7 @@ results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/HNCO_10_3_8_-9_3_7__width30.subcube.moment1.fits
 shift_data = 8.0 km/s
 #label = NGC 6334I ALMA1 CH$$_3$$OH
-label = NGC 6334I ALMA1 HNCO
+label = NGC 6334I ALMAe? HNCO
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -130,8 +130,26 @@ arrows_ls = -, --
 arrows_style = ->, -
 arrows_pa = 60 deg, 0 deg
 
-[NGC6334I_alma4_moment1]
+[NGC6334I_alma8_moment1]
 loc = 1 0
+source = NGC6334I
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma8_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = 4.7 km/s
+label = NGC 6334I ALMAe2 CH$$_3$$OH
+# Range
+vmin = -3 km/s
+vmax = 3 km/s
+# Recenter
+center = 17h20m53.64398s -35d46m54.8823s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 17h20m53.622s -35d46m55.1s icrs
+scale_distance = 1.35 kpc
+arrows_pa = 50 deg
+
+[NGC6334I_alma4_moment1]
+loc = 1 1
 source = NGC6334I
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma4_moments
 #image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
@@ -139,7 +157,7 @@ image = ${results}/HNCO_10_3_8_-9_3_7__width30.subcube.moment1.fits
 #shift_data = 10.7 km/s
 shift_data = 6.92 km/s
 #label = NGC 6334I ALMA4 CH$$_3$$OH
-label = NGC 6334I ALMA4 HNCO
+label = NGC 6334I ALMAe3 HNCO
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -156,24 +174,6 @@ arrows_ls = -, --
 arrows_style = ->, -
 arrows_pa = 20 deg, 250 deg
 
-[NGC6334I_alma8_moment1]
-loc = 1 1
-source = NGC6334I
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma8_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = 4.7 km/s
-label = NGC 6334I ALMA8 CH$$_3$$OH
-# Range
-vmin = -3 km/s
-vmax = 3 km/s
-# Recenter
-center = 17h20m53.64398s -35d46m54.8823s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 17h20m53.622s -35d46m55.1s icrs
-scale_distance = 1.35 kpc
-arrows_pa = 50 deg
-
 [NGC6334I_continuum]
 loc = 0 2, 1 0, 1 1
 contour = ${contdir}/NGC6334I.config8.cont_avg.selfcal_0.5_hogbom.image.fits
@@ -181,13 +181,31 @@ ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
-[NGC6334IN_alma1_moment1]
+[NGC6334IN_alma2_moment1]
 loc = 1 2
+source = NGC_6334_I_N
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = 3.9 km/s
+#shift_data = -0.74 km/s
+label = NGC 6334I(N) ALMAe1 CH$$_3$$OH
+# Range
+vmin = -5 km/s
+vmax = 5 km/s
+# Recenter
+center = 17h20m54.59280s -35d45m17.3686s icrs
+# Artists
+scale = 17h20m54.559s -35d45m17.8s icrs
+scale_distance = 1.35 kpc
+arrows_pa = -55 deg
+
+[NGC6334IN_alma1_moment1]
+loc = 2 0
 source = NGC_6334_I_N
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = 1.77 km/s
-label = NGC 6334I(N) ALMA1 CH$$_3$$OH
+label = NGC 6334I(N) ALMAe2 CH$$_3$$OH
 # Range
 vmin = -8 km/s
 vmax = 8 km/s
@@ -202,31 +220,31 @@ arrows_ls = -, --
 arrows_style = ->, -
 arrows_pa = 310 deg, 35 deg
 
-[NGC6334IN_alma2_moment1]
-loc = 2 0
+[NGC6334IN_alma6_moment1]
+loc = 2 1
 source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = 3.9 km/s
-#shift_data = -0.74 km/s
-label = NGC 6334I(N) ALMA2 CH$$_3$$OH
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
+image = ${results}/CH3CN_12_3_-11_3__width40.subcube.moment1.fits
+shift_data = 7.2 km/s
+label = NGC 6334I(N) ALMAe4 CH$$_3$$OH
 # Range
-vmin = -5 km/s
-vmax = 5 km/s
+vmin = -8 km/s
+vmax = 8 km/s
 # Recenter
-center = 17h20m54.59280s -35d45m17.3686s icrs
+center = 17h20m54.61962s -35d45m08.6715s icrs
+radius = 0.3 arcsec
 # Artists
-scale = 17h20m54.559s -35d45m17.8s icrs
+scale = 17h20m54.598s -35d45m08.9s icrs
 scale_distance = 1.35 kpc
-arrows_pa = -55 deg
+arrows_pa = 130 deg
 
 [NGC6334IN_alma4_moment1]
-loc = 2 1
+loc = 2 2
 source = NGC_6334_I_N
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma4_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = 6.7 km/s
-label = NGC 6334I(N) ALMA4 CH$$_3$$CN
+label = NGC 6334I(N) ALMAe5 CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -242,24 +260,6 @@ arrows_ls = -, --
 arrows_style = ->, -
 arrows_pa = 130 deg, 40 deg
 
-[NGC6334IN_alma6_moment1]
-loc = 2 2
-source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
-image = ${results}/CH3CN_12_3_-11_3__width40.subcube.moment1.fits
-shift_data = 7.2 km/s
-label = NGC 6334I(N) ALMA6 CH$$_3$$OH
-# Range
-vmin = -8 km/s
-vmax = 8 km/s
-# Recenter
-center = 17h20m54.61962s -35d45m08.6715s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 17h20m54.598s -35d45m08.9s icrs
-scale_distance = 1.35 kpc
-arrows_pa = 130 deg
-
 [NGC6334IN_alma11_moment1]
 loc = 3 0
 set_xlabel = true
@@ -268,7 +268,7 @@ source = NGC_6334_I_N
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma11_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = 5.0 km/s
-label = NGC 6334I(N) ALMA11 CH$$_3$$OH
+label = NGC 6334I(N) ALMAe13 CH$$_3$$OH
 # Range
 vmin = -8 km/s
 vmax = 8 km/s
@@ -293,7 +293,7 @@ source = W33A
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -37.9 km/s
-label = W33A ALMA1a CH$$_3$$CN
+label = W33A ALMAe1 CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -314,7 +314,7 @@ source = W33A
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -38.2 km/s
-label = W33A ALMA1b CH$$_3$$CN
+label = W33A ALMAe4 CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
