--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -30,7 +30,7 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -47,6 +47,7 @@ deg = $$^\circ$$
 loc = 0 0
 source = G10.62-0.38
 alma = 1a
+almae = 1
 paval = 0
 pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61920_dec-19.93041.PA${paval}.fits
 hlines = 0.851 km/s
@@ -112,6 +113,7 @@ model_info = 1
 loc = 0 1
 source = G10.62-0.38
 alma = 1a
+almae = 1
 paval = 90
 pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61920_dec-19.93041.PA${paval}.fits
 hlines = 0.851 km/s
@@ -156,6 +158,7 @@ model_info = 1
 loc = 1 0
 source = G10.62-0.38
 alma = 1c
+almae = 3
 paval = 180
 pvmap = ${results}/${source}_alma1c_rotation.CH3CN_K3.ra272.61971_dec-19.93040.PA${paval}.fits
 hlines = 0.851 km/s
@@ -219,6 +222,7 @@ model_info = 1
 loc = 1 1
 source = G10.62-0.38
 alma = 1c
+almae = 3
 paval = 270
 pvmap = ${results}/${source}_alma1c_rotation.CH3CN_K3.ra272.61971_dec-19.93040.PA${paval}.fits
 hlines = 0.851 km/s
@@ -263,6 +267,7 @@ model_info = 1
 loc = 2 0
 source = G11.1-0.12
 alma = 1
+almae = 1
 paval = -65
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.61770_dec-19.37509.PA${paval}.fits
 xlim = -0.21 0.28 arcsec
@@ -327,6 +332,7 @@ model_info = 1
 loc = 2 1
 source = G11.1-0.12
 alma = 1
+almae = 1
 paval = 25
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.61770_dec-19.37509.PA${paval}.fits
 xlim = -0.26 0.26 arcsec
@@ -372,6 +378,7 @@ model_info = 1
 loc = 3 0
 source = G11.92-0.61
 alma = 1a
+almae = 1
 paval = 129
 pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA${paval}.fits
 hlines = 35.1 km/s
@@ -435,6 +442,7 @@ model_info = 1
 loc = 3 1
 source = G11.92-0.61
 alma = 1a
+almae = 1
 paval = 219
 pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA${paval}.fits
 hlines = 35.1 km/s
