--- a/configs/plots/papers/group_pv_maps.10.cfg
+++ b/configs/plots/papers/group_pv_maps.10.cfg
@@ -29,7 +29,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
+almae = ${alma}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -101,7 +102,7 @@ loc = 2 0
 source = G35.20-0.74_N
 alma = 2
 paval = -23
-label = G35.20-0.74 N ALMA${alma} PA=${paval}${deg}
+label = G35.20-0.74 N ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra284.55432_dec1.67665.PA${paval}.fits
 xlim = -0.48 0.48 arcsec
 ylim = 20 40 km/s
@@ -119,7 +120,7 @@ loc = 2 1
 source = G35.20-0.74_N
 alma = 2
 paval = 67
-label = G35.20-0.74 N ALMA${alma} PA=${paval}${deg}
+label = G35.20-0.74 N ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra284.55432_dec1.67665.PA${paval}.fits
 xlim = -0.48 0.48 arcsec
 ylim = 20 40 km/s
