--- a/configs/plots/papers/group_pv_maps.11.cfg
+++ b/configs/plots/papers/group_pv_maps.11.cfg
@@ -29,7 +29,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
+almae = ${alma}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -48,7 +49,7 @@ loc = 0 0
 source = IRAS_165623959
 alma = 1
 paval = 10
-label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
+label = IRAS 16562-3959 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra254.92344_dec-40.06212.PA${paval}.fits
 hlines = -16.86 km/s
 rms = 1.4 mJy/beam
@@ -59,7 +60,7 @@ loc = 0 1
 source = IRAS_165623959
 alma = 1
 paval = 100
-label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
+label = IRAS 16562-3959 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra254.92344_dec-40.06212.PA${paval}.fits
 hlines = -16.86 km/s
 rms = 1.4 mJy/beam
@@ -69,8 +70,9 @@ vmax = 32 mJy/beam
 loc = 1 0
 source = IRAS_165623959
 alma = 2
+almae = 4
 paval = 225
-label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
+label = IRAS 16562-3959 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
 xlim = -0.23 0.23 arcsec
 hlines = -11.65 km/s
@@ -87,52 +89,23 @@ markers_ms = 10
 loc = 1 1
 source = IRAS_165623959
 alma = 2
+almae = 4
 paval = 315
-label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
+label = IRAS 16562-3959 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
 xlim = -0.23 0.23 arcsec
 hlines = -11.65 km/s
 rms = 1.4 mJy/beam
 vmax = 20 mJy/beam
 
-[I18182_alma1_pvmap_rot]
+[I18182_alma2_pvmap_rot]
 loc = 2 0
 xticks_fmt = {x:.2f}
 source = IRAS_18182-1433
-alma = 1
-paval = 40
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
-xlim = -0.2 0.15 arcsec
-hlines = 62.78 km/s
-rms = 1.4 mJy/beam
-vmax = 11 mJy/beam
-markers = 0.017 arcsec 66.3 km/s, -0.077 arcsec 61.0 km/s
-markers_physframe = data
-markers_marker = v, ^
-markers_mec = #46eff2
-markers_mfc = #46eff2
-markers_ms = 10
-
-[I18182_alma1_pvmap_out]
-loc = 2 1
-source = IRAS_18182-1433
-alma = 1
-paval = 130
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
-xlim = -0.18 0.18 arcsec
-hlines = 62.78 km/s
-rms = 1.4 mJy/beam
-vmax = 11 mJy/beam
-
-[I18182_alma2_pvmap_rot]
-loc = 3 0
-xticks_fmt = {x:.2f}
-source = IRAS_18182-1433
 alma = 2
+almae = 1
 paval = 0
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra275.28741_dec-14.52989.PA${paval}.fits
 xlim = -0.15 0.2 arcsec
 hlines = 60.64 km/s
@@ -146,14 +119,48 @@ markers_mfc = #46eff2
 markers_ms = 10
 
 [I18182_alma2_pvmap_out]
-loc = 3 1
+loc = 2 1
 source = IRAS_18182-1433
 alma = 2
+almae = 1
 paval = 90
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra275.28741_dec-14.52989.PA${paval}.fits
 xlim = -0.18 0.22 arcsec
 hlines = 60.64 km/s
 rms = 1.4 mJy/beam
 vmax = 15 mJy/beam
+
+[I18182_alma1_pvmap_rot]
+loc = 3 0
+xticks_fmt = {x:.2f}
+source = IRAS_18182-1433
+alma = 1
+almae = 2
+paval = 40
+label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
+xlim = -0.2 0.15 arcsec
+hlines = 62.78 km/s
+rms = 1.4 mJy/beam
+vmax = 11 mJy/beam
+markers = 0.017 arcsec 66.3 km/s, -0.077 arcsec 61.0 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
+
+[I18182_alma1_pvmap_out]
+loc = 3 1
+source = IRAS_18182-1433
+alma = 1
+almae = 2
+paval = 130
+label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
+xlim = -0.18 0.18 arcsec
+hlines = 62.78 km/s
+rms = 1.4 mJy/beam
+vmax = 11 mJy/beam
 
