--- a/configs/plots/papers/group_pv_maps.12.cfg
+++ b/configs/plots/papers/group_pv_maps.12.cfg
@@ -29,7 +29,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
+almae = ${alma}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -46,8 +47,9 @@ deg = $$^\circ$$
 loc = 0 0
 source = IRAS_18182-1433
 alma = 5
+almae = 10
 paval = 40
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma5_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${paval}.fits
 xlim = -0.1 0.12 arcsec
 hlines = 62.7 km/s
@@ -64,8 +66,9 @@ markers_ms = 10
 loc = 0 1
 source = IRAS_18182-1433
 alma = 5
+almae = 10
 paval = 130
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma5_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${paval}.fits
 xlim = -0.13 0.13 arcsec
 hlines = 62.7 km/s
@@ -76,6 +79,7 @@ vmax = 15 mJy/beam
 loc = 1 0
 source = NGC6334I
 alma = 8
+almae = 2
 paval = 50
 pvmap = ${results}/${source}_alma8_rotation.CH3OH_spw0.ra260.22352_dec-35.78191.PA${paval}.fits
 xlim = -0.2 0.2 arcsec
@@ -94,6 +98,7 @@ markers_ms = 10
 loc = 1 1
 source = NGC6334I
 alma = 8
+almae = 2
 paval = 140
 pvmap = ${results}/${source}_alma8_rotation.CH3OH_spw0.ra260.22352_dec-35.78191.PA${paval}.fits
 xlim = -0.2 0.2 arcsec
@@ -106,8 +111,9 @@ vmax = 15 mJy/beam
 loc = 2 0
 source = NGC_6334_I_N
 alma = 2
+almae = 1
 paval = -55
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
 xlim = -0.3 0.3 arcsec
 hlines = -3.9 km/s
@@ -124,8 +130,9 @@ markers_ms = 10
 loc = 2 1
 source = NGC_6334_I_N
 alma = 2
+almae = 1
 paval = 35
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
 xlim = -0.3 0.3 arcsec
 ylim = -15 10 km/s
@@ -137,8 +144,9 @@ vmax = 16 mJy/beam
 loc = 3 0
 source = NGC_6334_I_N
 alma = 11
+almae = 13
 paval = 160
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma11_rotation.CH3CN_K3.ra260.22849_dec-35.75168.PA${paval}.fits
 ylim = -15 5 km/s
 hlines = -5.0 km/s
@@ -155,8 +163,9 @@ markers_ms = 10
 loc = 3 1
 source = NGC_6334_I_N
 alma = 11
+almae = 13
 paval = 250
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma11_rotation.CH3CN_K3.ra260.22849_dec-35.75168.PA${paval}.fits
 ylim = -15 5 km/s
 hlines = -5.0 km/s
