--- a/configs/plots/papers/group_pv_maps.13.cfg
+++ b/configs/plots/papers/group_pv_maps.13.cfg
@@ -45,9 +45,10 @@ deg = $$^\circ$$
 loc = 0 0
 source = G333.12-0.56
 alma = 1
+almae = 1
 paval = 135
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra245.39740_dec-50.68239.PA${paval}.fits
-label = ${source} ALMA${alma} CH$$_3$$CN
+label = ${source} ALMAe${almae} CH$$_3$$CN
 xlim = -0.3 0.3 arcsec
 hlines = -58.47 km/s
 rms = 1.8 mJy/beam
@@ -109,9 +110,10 @@ coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${mod
 loc = 1 0
 source = G333.46-0.16
 alma = 1
+almae = 1
 paval = 130
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra245.33407_dec-50.16288.PA${paval}.fits
-label = ${source} ALMA${alma} CH$$_3$$OH
+label = ${source} ALMAe${almae} CH$$_3$$OH
 xlim = -0.45 0.45 arcsec
 ylim = -60 -30 km/s
 hlines = -43.55 km/s
@@ -128,9 +130,10 @@ markers_ms = 10
 loc = 2 0
 source = G333.46-0.16
 alma = 1
+almae = 1
 paval = 130
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra245.33407_dec-50.16288.PA${paval}.fits
-label = ${source} ALMA${alma} CH$$_3$$CN
+label = ${source} ALMAe${almae} CH$$_3$$CN
 xlim = -0.45 0.45 arcsec
 ylim = -60 -30 km/s
 hlines = -43.55 km/s
