--- a/configs/plots/papers/group_pv_maps.14.cfg
+++ b/configs/plots/papers/group_pv_maps.14.cfg
@@ -29,7 +29,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
+almae = ${alma}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -46,6 +47,7 @@ deg = $$^\circ$$
 loc = 0 0
 source = W33A
 alma = 1b
+almae = 4
 paval = 90
 pvmap = ${results}/${source}_alma1b_rotation.CH3CN_K3.ra273.66468_dec-17.86679.PA${paval}.fits
 hlines = 38.2 km/s
@@ -61,6 +63,7 @@ markers_ms = 10
 loc = 0 1
 source = W33A
 alma = 1b
+almae = 4
 paval = 180
 pvmap = ${results}/${source}_alma1b_rotation.CH3CN_K3.ra273.66468_dec-17.86679.PA${paval}.fits
 hlines = 38.2 km/s
