--- a/configs/plots/papers/group_pv_maps.2.cfg
+++ b/configs/plots/papers/group_pv_maps.2.cfg
@@ -29,7 +29,7 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -46,6 +46,7 @@ deg = $$^\circ$$
 loc = 0 0
 source = G11.92-0.61
 alma = 3
+almae = 4
 paval = 225
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra273.49223_dec-18.90452.PA${paval}.fits
 xlim = -0.35 0.42 arcsec
@@ -110,6 +111,7 @@ model_info = 1
 loc = 0 1
 source = G11.92-0.61
 alma = 3
+almae = 4
 paval = 315
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra273.49223_dec-18.90452.PA${paval}.fits
 xlim = -0.35 0.35 arcsec
@@ -154,6 +156,7 @@ model_info = 1
 loc = 1 0
 source = G29.96-0.02
 alma = 1
+almae = 1
 paval = 155
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.PA${paval}.fits
 hlines = 97.25 km/s
@@ -217,6 +220,7 @@ model_info = 1
 loc = 1 1
 source = G29.96-0.02
 alma = 1
+almae = 1
 paval = 245
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.PA${paval}.fits
 hlines = 97.25 km/s
@@ -261,6 +265,7 @@ model_info = 1
 loc = 2 0
 source = G333.12-0.56
 alma = 1
+almae = 1
 paval = 135
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA${paval}.fits
 xlim = -0.3 0.3 arcsec
@@ -325,6 +330,7 @@ model_info = 1
 loc = 2 1
 source = G333.12-0.56
 alma = 1
+almae = 1
 paval = 225
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA${paval}.fits
 xlim = -0.3 0.3 arcsec
@@ -369,7 +375,8 @@ model_info = 1
 loc = 3 0
 source = G333.23-0.06
 alma = 3
-label = ${source} ALMA${alma}a PA=${paval}${deg}
+almae = 5
+#label = ${source} ALMAe${almae}a PA=${paval}${deg}
 paval = 220
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
 xlim = -0.4 0.4 arcsec
@@ -434,8 +441,9 @@ model_info = 1
 loc = 3 1
 source = G333.23-0.06
 alma = 3
+almae = 5
 paval = 310
-label = ${source} ALMA${alma}a PA=${paval}${deg}
+#label = ${source} ALMA${alma}a PA=${paval}${deg}
 pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
 xlim = -0.32 0.32 arcsec
 hlines = -87.04 km/s
