--- a/configs/plots/papers/group_pv_maps.3.cfg
+++ b/configs/plots/papers/group_pv_maps.3.cfg
@@ -29,7 +29,7 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -46,6 +46,7 @@ deg = $$^\circ$$
 loc = 0 0
 source = G333.23-0.06
 alma = 3b
+almae = 14
 paval = 125
 pvmap = ${results}/${source}_alma3b_rotation.CH3CN_K3.ra244.96199_dec-50.25295.PA${paval}.fits
 xlim = -0.38 0.38 arcsec
@@ -110,6 +111,7 @@ coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${mod
 loc = 0 1
 source = G333.23-0.06
 alma = 3b
+almae = 14
 paval = 215
 pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra244.96199_dec-50.25295.PA${paval}.fits
 xlim = -0.32 0.32 arcsec
@@ -153,6 +155,7 @@ coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${mod
 loc = 1 0
 source = G333.46-0.16
 alma = 1
+almae = 1
 paval = 130
 pvmap = ${results}/${source}_alma1_rotation.HNCO_10.ra245.33407_dec-50.16288.PA${paval}.fits
 xlim = -0.45 0.45 arcsec
@@ -218,6 +221,7 @@ coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${mod
 loc = 1 1
 source = G333.46-0.16
 alma = 1
+almae = 1
 paval = 220
 pvmap = ${results}/${source}_alma1_rotation.HNCO_10.ra245.33407_dec-50.16288.PA${paval}.fits
 xlim = -0.45 0.45 arcsec
@@ -263,6 +267,7 @@ coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${mod
 loc = 2 0
 source = G333.46-0.16
 alma = 7
+almae = 2
 paval = 130
 pvmap = ${results}/${source}_alma7_rotation.CH3CN_K3.ra245.33405_dec-50.16358.PA${paval}.fits
 xlim = -0.4 0.4 arcsec
@@ -327,6 +332,7 @@ model_info = 1
 loc = 2 1
 source = G333.46-0.16
 alma = 7
+almae = 2
 paval = 220
 pvmap = ${results}/${source}_alma7_rotation.CH3CN_K3.ra245.33405_dec-50.16358.PA${paval}.fits
 xlim = -0.4 0.4 arcsec
@@ -370,6 +376,7 @@ model_info = 1
 loc = 3 0
 source = G335.579-0.272
 alma = 1
+almae = 1
 paval = 150
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.PA${paval}.fits
 hlines = -46.9 km/s
@@ -433,6 +440,7 @@ model_info = 1
 loc = 3 1
 source = G335.579-0.272
 alma = 1
+almae = 1
 paval = 240
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.PA${paval}.fits
 hlines = -46.9 km/s
