--- a/configs/plots/papers/group_pv_maps.4.cfg
+++ b/configs/plots/papers/group_pv_maps.4.cfg
@@ -29,7 +29,7 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -46,6 +46,7 @@ deg = $$^\circ$$
 loc = 0 0
 source = G335.579-0.272
 alma = 3
+almae = 4
 paval = 202
 pvmap = ${results}/${source}_alma3_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA${paval}.fits
 hlines = -53.1 km/s
@@ -109,6 +110,7 @@ model_info = 1
 loc = 0 1
 source = G335.579-0.272
 alma = 3
+almae = 4
 paval = 292
 pvmap = ${results}/${source}_alma3_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA${paval}.fits
 xlim = -0.35 0.35 arcsec
@@ -153,6 +155,7 @@ model_info = 1
 loc = 1 0
 source = G335.78+0.17
 alma = 1
+almae = 1
 paval = 215
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA${paval}.fits
 hlines = -48.94 km/s
@@ -216,6 +219,7 @@ model_info = 1
 loc = 1 1
 source = G335.78+0.17
 alma = 1
+almae = 1
 paval = 305
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA${paval}.fits
 hlines = -48.94 km/s
@@ -259,6 +263,7 @@ model_info = 1
 loc = 2 0
 source = G335.78+0.17
 alma = 2
+almae = 2
 paval = 65
 pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA${paval}.fits
 hlines = -50.51 km/s
@@ -322,6 +327,7 @@ model_info = 1
 loc = 2 1
 source = G335.78+0.17
 alma = 2
+almae = 2
 paval = 155
 pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA${paval}.fits
 xlim = -0.3 0.4 arcsec
@@ -365,6 +371,7 @@ model_info = 1
 loc = 3 0
 source = G336.01-0.82
 alma = 1
+almae = 2
 paval = 125
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA${paval}.fits
 hlines = -47.2 km/s
@@ -427,6 +434,7 @@ model_info = 1
 loc = 3 1
 source = G336.01-0.82
 alma = 1
+almae = 2
 paval = 215
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA${paval}.fits
 hlines = -47.2 km/s
