--- a/configs/plots/papers/group_pv_maps.5.cfg
+++ b/configs/plots/papers/group_pv_maps.5.cfg
@@ -29,7 +29,7 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -46,6 +46,7 @@ deg = $$^\circ$$
 loc = 0 0
 source = G34.43+0.24
 alma = 1
+almae = 2
 paval = 280
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra283.32503_dec1.42373.PA${paval}.fits
 hlines = 58.44 km/s
@@ -109,6 +110,7 @@ model_info = 1
 loc = 0 1
 source = G34.43+0.24
 alma = 1
+almae = 2
 paval = 10
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra283.32503_dec1.42373.PA${paval}.fits
 hlines = 58.44 km/s
@@ -150,7 +152,9 @@ model_info = 1
 [G35.03_alma1_pvmap_rot]
 loc = 1 0
 source = G35.03+0.35_A
+label =  G35.03+0.35 A ALMAe${almae} PA=${paval}${deg}
 alma = 1
+almae = 1
 paval = 310
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra283.50271_dec2.02204.PA${paval}.fits
 xlim = -0.55 0.55 arcsec
@@ -214,7 +218,9 @@ model_info = 1
 [G35.03_alma1_pvmap_out]
 loc = 1 1
 source = G35.03+0.35_A
+label =  G35.03+0.35 A ALMAe${almae} PA=${paval}${deg}
 alma = 1
+almae = 1
 paval = 40
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra283.50271_dec2.02204.PA${paval}.fits
 xlim = -0.55 0.55 arcsec
@@ -259,6 +265,7 @@ model_info = 1
 loc = 2 0
 source = G35.13-0.74
 alma = 1
+almae = 1
 paval = 45
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA${paval}.fits
 hlines = 35.93 km/s
@@ -322,6 +329,7 @@ model_info = 1
 loc = 2 1
 source = G35.13-0.74
 alma = 1
+almae = 1
 paval = 135
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA${paval}.fits
 hlines = 35.93 km/s
@@ -364,6 +372,7 @@ model_info = 1
 loc = 3 0
 source = G35.13-0.74
 alma = 2
+almae = 2
 paval = 75
 pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra284.52570_dec1.61893.PA${paval}.fits
 xlim = -0.25 0.23 arcsec
@@ -428,6 +437,7 @@ model_info = 1
 loc = 3 1
 source = G35.13-0.74
 alma = 2
+almae = 2
 paval = 165
 pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra284.52570_dec1.61893.PA${paval}.fits
 xlim = -0.23 0.23 arcsec
