--- a/configs/plots/papers/group_pv_maps.6.cfg
+++ b/configs/plots/papers/group_pv_maps.6.cfg
@@ -29,7 +29,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
+almae = ${alma}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -45,6 +46,7 @@ deg = $$^\circ$$
 [G35.20_alma1_pvmap_rot]
 loc = 0 0
 source = G35.20-0.74_N
+label =  G35.20-0.74 N ALMAe${almae} PA=${paval}${deg}
 alma = 1
 paval = -10
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA${paval}.fits
@@ -109,6 +111,7 @@ model_info = 1
 [G35.20_alma1_pvmap_out]
 loc = 0 1
 source = G35.20-0.74_N
+label =  G35.20-0.74 N ALMAe${almae} PA=${paval}${deg}
 alma = 1
 paval = 80
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA${paval}.fits
@@ -153,6 +156,7 @@ model_info = 1
 loc = 1 0
 source = G5.89-0.37
 alma = 14
+almae = 1
 paval = -30
 pvmap = ${results}/${source}_alma14_rotation.CH3CN_K3.ra270.12763_dec-24.06750.PA${paval}.fits
 hlines = 7.92 km/s
@@ -216,6 +220,7 @@ coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${mod
 loc = 1 1
 source = G5.89-0.37
 alma = 14
+almae = 1
 paval = 60
 pvmap = ${results}/${source}_alma14_rotation.CH3CN_K3.ra270.12763_dec-24.06750.PA${paval}.fits
 hlines = 7.92 km/s
@@ -259,7 +264,7 @@ loc = 2 0
 source = IRAS_180891732
 alma = 1
 paval = 245
-label = IRAS 18089-1732 ALMA${alma} PA=${paval}${deg}
+label = IRAS 18089-1732 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA${paval}.fits
 hlines = 32.88 km/s
 rms = 1.6 mJy/beam
@@ -323,7 +328,7 @@ loc = 2 1
 source = IRAS_180891732
 alma = 1
 paval = 335
-label = IRAS 18089-1732 ALMA${alma} PA=${paval}${deg}
+label = IRAS 18089-1732 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA${paval}.fits
 hlines = 32.88 km/s
 rms = 1.6 mJy/beam
@@ -366,8 +371,9 @@ model_info = 1
 loc = 3 0
 source = IRAS_180891732
 alma = 3
+almae = 2
 paval = 315
-label = IRAS 18089-1732 ALMA${alma} PA=${paval}${deg}
+label = IRAS 18089-1732 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA${paval}.fits
 hlines = 33.02 km/s
 rms = 1.6 mJy/beam
@@ -430,8 +436,9 @@ model_info = 1
 loc = 3 1
 source = IRAS_180891732
 alma = 3
+almae = 2
 paval = 45
-label = IRAS 18089-1732 ALMA${alma} PA=${paval}${deg}
+label = IRAS 18089-1732 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA${paval}.fits
 hlines = 33.02 km/s
 rms = 1.6 mJy/beam
