--- a/configs/plots/papers/group_pv_maps.7.cfg
+++ b/configs/plots/papers/group_pv_maps.7.cfg
@@ -29,7 +29,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
+almae = ${alma}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -47,7 +48,7 @@ loc = 0 0
 source = IRAS_181622048
 alma = 1
 paval = -70
-label = IRAS 18162-2048 ALMA${alma} PA=${paval}${deg}
+label = IRAS 18162-2048 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA${paval}.fits
 xlim = -0.55 0.55 arcsec
 hlines = 47.0 km/s
@@ -112,7 +113,7 @@ loc = 0 1
 source = IRAS_181622048
 alma = 1
 paval = 20
-label = IRAS 18162-2048 ALMA${alma} PA=${paval}${deg}
+label = IRAS 18162-2048 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA${paval}.fits
 xlim = -0.48 0.48 arcsec
 hlines = 47.0 km/s
@@ -155,8 +156,9 @@ coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${mod
 loc = 1 0
 source = IRAS_18182-1433
 alma = 3
+almae = 5
 paval = 10
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
 hlines = 61.12 km/s
 rms = 1.4 mJy/beam
@@ -219,8 +221,9 @@ model_info = 1
 loc = 1 1
 source = IRAS_18182-1433
 alma = 3
+almae = 5
 paval = 100
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
 hlines = 61.12 km/s
 rms = 1.4 mJy/beam
@@ -368,6 +371,7 @@ coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${mod
 loc = 3 0
 source = NGC6334I
 alma = 4
+almae = 3
 paval = 20
 pvmap = ${results}/${source}_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA${paval}.fits
 hlines = -6.92 km/s
@@ -431,6 +435,7 @@ coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${mod
 loc = 3 1
 source = NGC6334I
 alma = 4
+almae = 3
 paval = 110
 pvmap = ${results}/${source}_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA${paval}.fits
 hlines = -6.92 km/s
