--- a/configs/plots/papers/group_pv_maps.8.cfg
+++ b/configs/plots/papers/group_pv_maps.8.cfg
@@ -29,7 +29,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
+almae = ${alma}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -46,8 +47,9 @@ deg = $$^\circ$$
 loc = 0 0
 source = NGC_6334_I_N
 alma = 1
+almae = 2
 paval = 310
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
 hlines = -1.77 km/s
 rms = 1.7 mJy/beam
@@ -110,8 +112,9 @@ model_info = 1
 loc = 0 1
 source = NGC_6334_I_N
 alma = 1
+almae = 2
 paval = 40
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
 hlines = -1.77 km/s
 rms = 1.7 mJy/beam
@@ -149,120 +152,13 @@ model_vsys = -3.5721185677940523
 model_offset0 = 0.11505712307143032
 model_info = 1
 
-[NGC6334IN_alma4_pvmap_rot]
-loc = 1 0
-source = NGC_6334_I_N
-alma = 4
-paval = 130
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA${paval}.fits
-hlines = -6.7 km/s
-rms = 1.7 mJy/beam
-vmax = 20 mJy/beam
-spine_color = red
-
-[NGC_6334_I_N_alma4_pvedge]
-loc = 1 0
-structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma4_pvmaps/NGC_6334_I_N_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA130.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[NGC_6334_I_N_alma4_keplerian_fit]
-loc = 1 0
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 5.008559892995641 solMass
-model_sd_mass = 0.406582460919903 solMass
-model_amplitude = -6.665758063838215
-model_x_0 = 0.07407407407407407
-model_alpha = 0.5
-model_vsys = -5.1109728228308375
-model_offset0 = 0.0026538640954391506
-model_sd_amplitude = 0.2705548476401526
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC_6334_I_N_alma4_unrestricted_fit]
-loc = 1 0
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -7.542074600407852
-model_x_0 = 0.07407407407407407
-model_alpha = 0.689992836962557
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -5.1109728228308375
-model_offset0 = 0.0026538640954391506
-model_sd_amplitude = 0.509191397488919
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.08138008183005685
-model_sd_vsys = 0.24941754130606864
-model_sd_offset0 = 0.009763104615705958
-model_info = 1
-
-[NGC6334IN_alma4_pvmap_out]
-loc = 1 1
-source = NGC_6334_I_N
-alma = 4
-paval = 220
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA${paval}.fits
-hlines = -6.7 km/s
-rms = 1.7 mJy/beam
-vmax = 20 mJy/beam
-spine_color = red
-
-[NGC_6334_I_N_alma4_infall]
-loc = 1 1
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 5.008559892995641 solMass
-model_amplitude = -6.665758063838215
-model_x_0 = 0.14814814814814814
-model_alpha = 0.5
-model_vsys = -5.1109728228308375
-model_offset0 = 0.0026538640954391506
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC_6334_I_N_alma4_infall_mirror]
-loc = 1 1
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 5.008559892995641 solMass
-model_amplitude = 6.665758063838215
-model_x_0 = 0.14814814814814814
-model_alpha = 0.5
-model_vsys = -5.1109728228308375
-model_offset0 = 0.0026538640954391506
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
 [NGC6334IN_alma6_pvmap_rot]
-loc = 2 0
+loc = 1 0
 source = NGC_6334_I_N
 alma = 6
+almae = 4
 paval = 130
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA${paval}.fits
 hlines = -7.2 km/s
 rms = 1.7 mJy/beam
@@ -270,7 +166,7 @@ vmax = 38 mJy/beam
 spine_color = red
 
 [NGC_6334_I_N_alma6_pvedge]
-loc = 2 0
+loc = 1 0
 structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma6_pvmaps/NGC_6334_I_N_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA130.edge.dat
 marker = o
 color = #46eff2
@@ -278,7 +174,7 @@ linestyle = none
 plot_keys = OFFSET, VRAD
 
 [NGC_6334_I_N_alma6_keplerian_fit]
-loc = 2 0
+loc = 1 0
 function = piecewise_powerlaw
 xrange = -0.49500000000000005 0.49500000000000005 arcsec
 yunit = km/s
@@ -301,7 +197,7 @@ model_sd_offset0 = 0.0
 model_info = 1
 
 [NGC_6334_I_N_alma6_unrestricted_fit]
-loc = 2 0
+loc = 1 0
 function = piecewise_powerlaw
 xrange = -0.49500000000000005 0.49500000000000005 arcsec
 yunit = km/s
@@ -322,11 +218,12 @@ model_sd_offset0 = 0.009085026897949643
 model_info = 1
 
 [NGC6334IN_alma6_pvmap_out]
-loc = 2 1
+loc = 1 1
 source = NGC_6334_I_N
 alma = 6
+almae = 4
 paval = 220
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA${paval}.fits
 hlines = -7.2 km/s
 rms = 1.7 mJy/beam
@@ -334,7 +231,7 @@ vmax = 38 mJy/beam
 spine_color = red
 
 [NGC_6334_I_N_alma6_infall]
-loc = 2 1
+loc = 1 1
 function = piecewise_powerlaw
 xrange = -0.49500000000000005 0.49500000000000005 arcsec
 sampling = 500
@@ -350,7 +247,7 @@ model_offset0 = -0.033134059487579144
 model_info = 1
 
 [NGC_6334_I_N_alma6_infall_mirror]
-loc = 2 1
+loc = 1 1
 function = piecewise_powerlaw
 xrange = -0.49500000000000005 0.49500000000000005 arcsec
 sampling = 500
@@ -365,10 +262,121 @@ model_vsys = -3.714491730229512
 model_offset0 = -0.033134059487579144
 model_info = 1
 
+[NGC6334IN_alma4_pvmap_rot]
+loc = 2 0
+source = NGC_6334_I_N
+alma = 4
+almae = 5
+paval = 130
+label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA${paval}.fits
+hlines = -6.7 km/s
+rms = 1.7 mJy/beam
+vmax = 20 mJy/beam
+spine_color = red
+
+[NGC_6334_I_N_alma4_pvedge]
+loc = 2 0
+structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma4_pvmaps/NGC_6334_I_N_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA130.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[NGC_6334_I_N_alma4_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 5.008559892995641 solMass
+model_sd_mass = 0.406582460919903 solMass
+model_amplitude = -6.665758063838215
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5
+model_vsys = -5.1109728228308375
+model_offset0 = 0.0026538640954391506
+model_sd_amplitude = 0.2705548476401526
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC_6334_I_N_alma4_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -7.542074600407852
+model_x_0 = 0.07407407407407407
+model_alpha = 0.689992836962557
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -5.1109728228308375
+model_offset0 = 0.0026538640954391506
+model_sd_amplitude = 0.509191397488919
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.08138008183005685
+model_sd_vsys = 0.24941754130606864
+model_sd_offset0 = 0.009763104615705958
+model_info = 1
+
+[NGC6334IN_alma4_pvmap_out]
+loc = 2 1
+source = NGC_6334_I_N
+alma = 4
+almae = 5
+paval = 220
+label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA${paval}.fits
+hlines = -6.7 km/s
+rms = 1.7 mJy/beam
+vmax = 20 mJy/beam
+spine_color = red
+
+[NGC_6334_I_N_alma4_infall]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 5.008559892995641 solMass
+model_amplitude = -6.665758063838215
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+model_vsys = -5.1109728228308375
+model_offset0 = 0.0026538640954391506
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC_6334_I_N_alma4_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 5.008559892995641 solMass
+model_amplitude = 6.665758063838215
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+model_vsys = -5.1109728228308375
+model_offset0 = 0.0026538640954391506
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
 [W33A_alma1a_pvmap_rot]
 loc = 3 0
 source = W33A
 alma = 1a
+almae = 1
 paval = -30
 pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.PA${paval}.fits
 hlines = 37.9 km/s
@@ -432,6 +440,7 @@ model_info = 1
 loc = 3 1
 source = W33A
 alma = 1a
+almae = 1
 paval = 60
 pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.PA${paval}.fits
 hlines = 37.9 km/s
