--- a/configs/plots/papers/group_pv_maps.9.cfg
+++ b/configs/plots/papers/group_pv_maps.9.cfg
@@ -29,7 +29,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+label = ${source} ALMAe${almae} PA=${paval}${deg}
+almae = ${alma}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -46,6 +47,7 @@ deg = $$^\circ$$
 loc = 0 0
 source = G10.62-0.38
 alma = 1b
+almae = 2
 paval = -30
 pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61955_dec-19.93051.PA${paval}.fits
 xlim = -0.5 0.5 arcsec
@@ -57,6 +59,7 @@ vmax = 16 mJy/beam
 loc = 0 1
 source = G10.62-0.38
 alma = 1b
+almae = 2
 paval = 60
 pvmap = ${results}/${source}_alma1b_rotation.CH3CN_K3.ra272.61955_dec-19.93051.PA${paval}.fits
 xlim = -0.5 0.5 arcsec
@@ -68,6 +71,7 @@ vmax = 16 mJy/beam
 loc = 1 0
 source = G11.92-0.61
 alma = 1b
+almae = 5
 paval = -15
 pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra273.49220_dec-18.90576.PA${paval}.fits
 xlim = -0.3 0.3 arcsec
@@ -86,6 +90,7 @@ markers_ms = 10
 loc = 1 1
 source = G11.92-0.61
 alma = 1b
+almae = 5
 paval = 75
 pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra273.49220_dec-18.90576.PA${paval}.fits
 xlim = -0.3 0.3 arcsec
@@ -98,6 +103,7 @@ vmax = 20 mJy/beam
 loc = 2 0
 source = G14.22-0.50_S
 alma = 1
+almae = 2
 paval = 170
 pvmap = ${results}/${source}_alma${alma}_rotation.CH3OH_spw0.ra274.55359_dec-16.95566.PA${paval}.fits
 xlim = -0.1 0.1 arcsec
@@ -116,6 +122,7 @@ markers_ms = 10
 loc = 2 1
 source = G14.22-0.50_S
 alma = 1
+almae = 2
 paval = 260
 pvmap = ${results}/${source}_alma${alma}_rotation.CH3OH_spw0.ra274.55359_dec-16.95566.PA${paval}.fits
 xlim = -0.1 0.1 arcsec
@@ -129,6 +136,7 @@ label = G14.22-0.50 S ALMA${alma} PA=${paval}${deg}
 loc = 3 0
 source = G333.12-0.56
 alma = 2
+almae = 6
 paval = 90
 pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra245.40106_dec-50.67979.PA${paval}.fits
 xlim = -0.38 0.16 arcsec
@@ -146,6 +154,7 @@ markers_ms = 10
 loc = 3 1
 source = G333.12-0.56
 alma = 2
+almae = 6
 paval = 180
 pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra245.40106_dec-50.67979.PA${paval}.fits
 xlim = -0.3 0.3 arcsec
