--- a/configs/plots/papers/group_moments.3.cfg
+++ b/configs/plots/papers/group_moments.3.cfg
@@ -67,7 +67,7 @@ source = G35.13-0.74
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -35.53 km/s
-label = ${source} ALMA6 CH$$_3$$CN
+label = ${source} ALMAe6 CH$$_3$$CN
 # Range
 vmin = -4 km/s
 vmax = 4 km/s
@@ -97,7 +97,7 @@ results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = -32.11 km/s
 #shift_data = -30.3 km/s
-label = G35.20-0.74 N ALMA1 CH$$_3$$OH
+label = G35.20-0.74 N ALMAe1 CH$$_3$$OH
 # Range
 vmin = -3 km/s
 vmax = 3 km/s
@@ -118,7 +118,7 @@ source = G35.20-0.74_N
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = -30.0 km/s
-label = G35.20-0.74 N ALMA2 CH$$_3$$OH
+label = G35.20-0.74 N ALMAe2 CH$$_3$$OH
 # Range
 vmin = -3 km/s
 vmax = 3 km/s
@@ -146,7 +146,7 @@ source = G351.77-0.54
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = 3.83 km/s
-label = ${source} ALMA2 CH$$_3$$OH
+label = ${source} ALMAe2 CH$$_3$$OH
 # Range
 vmin = -7 km/s
 vmax = 7 km/s
@@ -174,7 +174,7 @@ source = G5.89-0.37
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma14_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -7.92 km/s
-label = G5.89-0.37 ALMA14 CH$$_3$$CN
+label = G5.89-0.37 ALMAe1 CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -199,7 +199,7 @@ source = IRAS_165623959
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = 16.86 km/s
-label = IRAS 16562-3959 ALMA1 CH$$_3$$CN
+label = IRAS 16562-3959 ALMAe1 CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -220,7 +220,7 @@ source = IRAS_165623959
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3CN_12_3_-11_3__width24.subcube.moment1.fits
 shift_data = 11.65 km/s
-label = IRAS 16562-3959 ALMA2 CH$$_3$$CN
+label = IRAS 16562-3959 ALMAe4 CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -248,7 +248,7 @@ source = IRAS_180891732
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width40.subcube.moment1.fits
 shift_data = -32.88 km/s
-label = IRAS 18089-1732 ALMA1 CH$$_3$$CN
+label = IRAS 18089-1732 ALMAe1 CH$$_3$$CN
 # Range
 vmin = -7 km/s
 vmax = 7 km/s
@@ -270,7 +270,7 @@ source = IRAS_180891732
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -33.02 km/s
-label = IRAS 18089-1732 ALMA3 CH$$_3$$CN
+label = IRAS 18089-1732 ALMAe2 CH$$_3$$CN
 # Range
 vmin = -5 km/s
 vmax = 5 km/s
@@ -301,7 +301,7 @@ source = IRAS_181622048
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/c-HCOOH_10_4_6_-9_4_5__width30.subcube.moment1.fits
 shift_data = -45.69 km/s
-label = IRAS 18162-2048 ALMA1 c-HCOOH
+label = IRAS 18162-2048 ALMAe1 c-HCOOH
 # Range
 vmin = -6 km/s
 vcenter = 0 km/s
@@ -325,35 +325,13 @@ ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
-[I18182_alma1_moment1]
-loc = 3 1
-source = IRAS_18182-1433
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -62.78 km/s
-label = IRAS 18182-1433 ALMA1 CH$$_3$$CN
-# Range
-vmin = -5 km/s
-vmax = 5 km/s
-# Recenter
-center = 18h21m09.04928s -14d31m47.7925s icrs
-radius = 0.4 arcsec
-# Artists
-scale = 18h21m09.028s -14d31m48.1s icrs
-scale_distance = 3.58 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 40 deg, 155 deg
-
 [I18182_alma2_moment1]
-loc = 3 2
+loc = 3 1
 source = IRAS_18182-1433
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -60.64 km/s
-label = IRAS 18182-1433 ALMA2 CH$$_3$$CN
+label = IRAS 18182-1433 ALMAe1 CH$$_3$$CN
 # Range
 vmin = -3 km/s
 vmax = 3 km/s
@@ -368,6 +346,28 @@ arrows_color = #f93dff, #02b829
 arrows_ls = -, --
 arrows_style = ->, -
 arrows_pa = 0 deg, 90 deg
+
+[I18182_alma1_moment1]
+loc = 3 2
+source = IRAS_18182-1433
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -62.78 km/s
+label = IRAS 18182-1433 ALMAe2 CH$$_3$$CN
+# Range
+vmin = -5 km/s
+vmax = 5 km/s
+# Recenter
+center = 18h21m09.04928s -14d31m47.7925s icrs
+radius = 0.4 arcsec
+# Artists
+scale = 18h21m09.028s -14d31m48.1s icrs
+scale_distance = 3.58 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 40 deg, 155 deg
 
 [I18182_continuum]
 loc = 3 1, 3 2
